# olympic-games-of-active-learning

./: .gitignore  .gitmodules  00_dowload_datasets.py  00_download_datasets.py  00_sync_and_run_experiment.py  01_create_workload.py  02_run_experiment.py  03_analyze_data.py  03_analyze_detailed_metric_files.py  03_calculate_advanced_metrics.py  03_calculate_dataset_categorizations.py  04_analyze_done_workload.py  04_calculate_advanced_metrics.py  04_calculate_all_compound_metrics.py  04_remove_results.py  05_analyze_done_workload.py  05_analyze_partially_run_workload.py  05_running_workload_stat.py  06_analyze_done_workload.py  06_correlation_analysis.py  06_freeze_webapp.py  07_interactive_results_browser.py  07b_create_results_without_flask.py  CITATION.cff  Pipfile  README.md  al_settings.pkl  dataset_list.txt  datasets.tex  environment.yml  fix_early_stopping_dict_keys_too_small_error.py  mkdocs.yml  mypy.ini  pyproject.toml  reduce.sh  reduce2.sh  test.py  test.sh
additional_query_strategies/: base_class.py  greedy_optimal.py  random_subsets_optimal.py  true_optimal.py
analyse_results/: cache.py  helper_functions.py
config/: config.py
datasets/: __init__.py  base.py  datasets.py  download_ucis.py  kaggle.py  kaggle_loader.py  kaggle_parameters.yaml  localImporter.py  local_loader.py  openml_loader.py  uci.py
docs/: MERMAID_STATIC_RENDERING.md  add_results.md  analyze_dataset.md  analyze_opara.md  architecture.md  configuration.md  contributing.md  correlations_paper_to_code.md  data_enrichment.md  data_model.md  dataset_metadata.md  dataset_value.md  hpc.md  (+12 more)
(+213 files in other folders)
