[tool.poetry]
name = "al-olympics"
version = "0.1.0"
description = ""
authors = ["Julius Gonsior"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
conda-lock = "^2.3.0"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
tabulate = "^0.9.0"
jupyter = "^1.0.0"
seaborn = "^0.13.0"
prettytable = "^3.9.0"
tqdm = "^4.66.1"
gitpython = "^3.1.37"
lxml = "^4.9.3"
html5lib = "^1.1"
bs4 = "^0.0.1"
requests = "^2.31.0"
pyyaml = "^6.0.1"
aenum = "^3.1.15"
kaggle = "^1.5.16"
livereload = "2.5.1"
pyinotify = "^0.9.6"
pandarallel = "^1.6.5"
stopit = "^1.1.2"
small-text = "^1.3.2"
pylint = "^3.0.1"
pydocstyle = "^6.3.0"
rope = "^1.10.0"
black = "^23.9.1"
mypy = "^1.5.1"
pycln = "^2.2.2"
alipy = {git = "https://github.com/jgonsior/ALiPy.git"}
playground = {git = "https://github.com/jgonsior/active-learning.git"}
scikit-activeml = {git = "https://github.com/jgonsior/scikit-activeml"}
libact = {git= "https://github.com/jgonsior/libact"}
scikit-learn = "<1.3"
jinja2 = "^3.1.2"
pytest = "^7.4.4"
dask = "^2024.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
